# SkillSpector-web

./: .env.adapter.example  .env.example  .gitignore  .skillspector-baseline.example.yaml  Dockerfile  FORK_README.md  Makefile  PRODUCT.md  README.md  VERSION  docker-compose.lan.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  container.yml  scorecard.yml
contrib/multilingual/: .env.example  CONTRIBUTING.md  __init__.py  annotation.py  api_pool.py  batch_scan.py  detection.py  discovery.py  gap_fill.py  reports.py  runner.py
contrib/multilingual/docs/: DESIGN.md  README.md  REVIEW_RESPONSE.md
contrib/multilingual/docs/archive/: ARCHITECTURE_DEEP_DIVE.md  DESIGN_HISTORY.md  FLOW_DIAGRAM.md  FUTURE_WORK.md  PITFALLS.md
contrib/multilingual/tests/: conftest.py  test_monkeypatch_fragility.py  test_monkeypatch_invasiveness.py  test_pool_wiring.py
contrib/multilingual/tests/docs/: BUGS_FOUND.md  TEST_DESIGN.md  TEST_GUIDE.md
contrib/multilingual/tests/tests-pro/: __init__.py  mutation_max.py  random_numbered.py  test_annotation.py  test_api_pool.py  test_gap_fill.py  test_runner_patches.py
docker/: entrypoint.sh
docs/: ADAPTER_DEPLOYMENT.md  DEVELOPMENT.md  LLM_ANALYZER_BASE_GUIDE.md  PI_EXTENSION.md  SUPPRESSION.md  UPSTREAM_MERGE_RELEASE_SOP.md
extensions/: skillspector.ts
src/skillspector/: __init__.py  cleanup.py  cli.py  constants.py  graph.py  input_handler.py  llm_analyzer_base.py  llm_limiter.py  llm_utils.py  mcp_server.py  models.py  multi_skill.py  sarif_models.py  state.py  suppression.py  upload_mcp_server.py  web.py
src/skillspector/nodes/: build_context.py  deduplicate.py  meta_analyzer.py  report.py  resolve_input.py
src/skillspector/nodes/analyzers/: __init__.py  behavioral_ast.py  behavioral_taint_tracking.py  common.py  mcp_least_privilege.py  mcp_rug_pull.py  (+17 more)
src/skillspector/providers/: __init__.py  _agent_cli.py  _agent_cli_base.py  base.py  chat_models.py
src/skillspector/yara_rules/: agent_skills.yar
tests/: test_mcp_least_privilege.py  test_mcp_rug_pull.py  test_mcp_tool_poisoning.py  test_multi_skill.py
tests/docker/: smoke.sh
tests/integration/: test_agent_cli_live.py  test_graph.py
tests/nodes/: test_analysis_completeness.py  test_build_context.py  test_deduplicate.py  test_llm_analyzer_base.py  test_meta_analyzer.py  test_meta_analyzer_fallback.py  test_report.py  test_report_sanitizer.py  test_sarif_rules_and_empty_findings.py  test_semantic_quality_policy.py
tests/nodes/analyzers/: test_behavioral_ast.py  test_behavioral_taint_tracking.py  test_binary_and_pe3_filtering.py  test_mcp_rug_pull.py  test_mp2_regex_backtracking.py  test_registry.py  test_semantic_developer_intent.py  test_semantic_security_discovery.py  test_static_patterns.py  test_static_patterns_anti_refusal.py  test_static_runner_filtering.py  test_static_yara.py
tests/unit/: test_agent_cli.py  test_anthropic_proxy_provider.py  test_bedrock_provider.py  test_cli.py  test_constants.py  test_input_handler.py  test_input_handler_ssrf.py  test_llm_utils.py  test_mcp_server.py  test_osv_client.py  test_patterns.py  test_patterns_new.py  test_providers.py  test_reviewer_nits.py  test_suppression.py  test_upload_mcp_server.py  test_web.py
(+16 files in other folders)
